# Development-of-Assistive-Robot-for-Commercial-Entity

HRI_System/launch/: hri.launch
HRI_System/scripts/: emotion_publisher.py  location_publisher.py
accelerometer_node/: CMakeLists.txt  accelerometer.py  commands.txt  package.xml
lifecam_ros/: CMakeLists.txt  README.md  package.xml
nova_motion_bot/launch/: spawn_nova.launch
nova_motion_bot/scripts/: move_straight.py
