<?xml version="1.0"?>
<package format="2">
  <name>accelerometer_node</name>
  <version>0.0.1</version>
  <description>Accelerometer node for ROS</description>
  <maintainer email="you@example.com">Hafsaah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
