<?xml version="1.0"?>
<package format="2">
  <name>lifecam_ros</name>
  <version>0.0.0</version>
  <description>The lifecam_ros package</description>

  <maintainer email="you@todo.todo">your_name</maintainer>
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>

</package>
